Fix clock, removed too much css

--- a/src/style.scss
+++ b/src/style.scss
@@ -283,6 +283,8 @@ div.muuri-item-placeholder {
 }
 
 .ctab-item-clock span {
+  width: 100%;
+  height: 100%;
   line-height: 100%;
 }
 
